--- a/d3bubblecopy.html
+++ b/d3bubblecopy.html
@@ -2,7 +2,6 @@
 <svg width="960" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
-
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
@@ -15,21 +14,17 @@ var pack = d3.pack()
     .size([width, height])
     .padding(1.5);
 
-d3.csv("hashtagdata.csv", function(d) {
-  // d.value = +d.value;
-  // if (d.value) return d;
-  return d;
-}, function(error, classes) {
-  if (error) throw error;
+d3.json("hashtagdata.json", function(classes) {
+  
 
   var root = d3.hierarchy({children: classes})
-      .sum(function(d) { return d.value; })
+      .sum(function(d) { return d.count; })
       .each(function(d) {
-        if (id = d.data.id) {
-          var id, i = id.lastIndexOf(".");
-          d.id = id;
-          d.package = id.slice(0, i);
-          d.class = id.slice(i + 1);
+        if (hashtag = d.data.hashtag) {
+          var hashtag, i = hashtag.lastIndexOf(".");
+          d.hashtag = hashtag;
+          d.package = hashtag.slice(0, i);
+          d.class = hashtag.slice(i + 1);
         }
       });
 
@@ -40,17 +35,17 @@ d3.csv("hashtagdata.csv", function(d) {
       .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
 
   node.append("circle")
-      .attr("id", function(d) { return d.id; })
+      .attr("hashtag", function(d) { return d.hashtag; })
       .attr("r", function(d) { return d.r; })
       .style("fill", function(d) { return color(d.package); });
 
   node.append("clipPath")
-      .attr("id", function(d) { return "clip-" + d.id; })
+      .attr("hashtag", function(d) { return "clip-" + d.hashtag; })
     .append("use")
-      .attr("xlink:href", function(d) { return "#" + d.id; });
+      .attr("xlink:href", function(d) { return "#" + d.hashtag; });
 
   node.append("text")
-      .attr("clip-path", function(d) { return "url(#clip-" + d.id + ")"; })
+      .attr("clip-path", function(d) { return "url(#clip-" + d.hashtag + ")"; })
     .selectAll("tspan")
     .data(function(d) { return d.class.split(/(?=[A-Z][^A-Z])/g); })
     .enter().append("tspan")
@@ -59,7 +54,7 @@ d3.csv("hashtagdata.csv", function(d) {
       .text(function(d) { return d; });
 
   node.append("title")
-      .text(function(d) { return d.id + "\n" + format(d.value); });
+      .text(function(d) { return d.hashtag + "\n" + format(d.count); });
 });
 
 </script>
